# featurelib

./: .gitignore  CMakeLists.txt  README
apps/: CMakeLists.txt
apps/featureextract/: CMakeLists.txt  featureextract_main.cpp
apps/featureextract_matlab/: CMakeLists.txt  featureextract.m
data/: CMakeLists.txt
include/: build_matlab.h  class_handle.h  featurelib.h
include/features/: BaseDistance.h  BaseFeature.h  Distance.h  EuclideanDistance.h  GrayValueHistogram.h  ImageFeature.h  LocDirectPattern.h  LocTernPattern.h  ModCensusPattern.h
src/: BaseFeature.m  CMakeLists.txt  GrayValueHistogram.cpp  LocDirectPattern.cpp  LocTernPattern.cpp  ModCensusPattern.cpp
